--- a/osr-evaluation.tex
+++ b/osr-evaluation.tex
@@ -390,7 +390,7 @@ fhourstones & 4.64 & 6 & 4.5 & 6 & 4.98 & 6 & 1.7 & 2 \\
 vp8 & 9.6 & 16 & 10.51 & 16 & 10.13 & 17 & 2.35 & 6 \\
 \hline
 \hline
-Mean & {\bf 11.07} & 18.75 & {\bf 12.26} & 20.50 & {\bf 12.81} & 21.50 & {\bf 2.82} & 7.17 \\
+Avg & {\bf 11.07} & 18.75 & {\bf 12.26} & 20.50 & {\bf 12.81} & 21.50 & {\bf 2.82} & 7.17 \\
 \hline
 \end{tabular}
 \end{small}
@@ -456,7 +456,7 @@ fhourstones & 0 & 0 & 1.12 & 4 & 1.42 & 4 \\
 vp8 & 5.74 & 13 & 5.51 & 13 & 1.18 & 5 \\
 \hline
 \hline
-Mean & {\bf 2.30} & 4.58 & {\bf 2.87} & 7.33 & {\bf 2.00} & 6.67 \\
+Avg & {\bf 2.30} & 4.58 & {\bf 2.87} & 7.33 & {\bf 2.00} & 6.67 \\
 \hline
 \end{tabular}
 \end{small}
