--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -1305,7 +1305,7 @@
 
 @inproceedings{Gal09,
   author = {Gal, Andreas and Eich, Brendan and Shaver, Mike and Anderson, David and Mandelin, David and Haghighat, Mohammad R. and Kaplan, Blake and Hoare, Graydon and Zbarsky, Boris and Orendorff, Jason and Ruderman, Jesse and Smith, Edwin W. and Reitmaier, Rick and Bebenita, Michael and Chang, Mason and Franz, Michael},
-  title = {{Trace-based Just-in-time Type Specialization for Dynamic Languages}},
+  title = {{Trace-based Just-in-Time Type Specialization for Dynamic Languages}},
   booktitle = {Proceedings of the 30th ACM SIGPLAN Conference on Programming Language Design and Implementation},
   series = {PLDI '09},
   year = {2009},
@@ -1422,7 +1422,7 @@
 
 @inproceedings{Chevalier2010,
   author = {Chevalier-Boisvert, Maxime and Hendren, Laurie and Verbrugge, Clark},
-  title = {{Optimizing MATLAB Through Just-in-time Specialization}},
+  title = {{Optimizing MATLAB Through Just-In-Time Specialization}},
   booktitle = {Proceedings of the 19th Joint European Conference on Theory and Practice of Software, International Conference on Compiler Construction},
   series = {CC'10/ETAPS'10},
   year = {2010},
@@ -2164,7 +2164,7 @@
 
 @article{Aycock03,
   author = {Aycock, John},
-  title = {{A Brief History of Just-in-time}},
+  title = {{A Brief History of Just-In-Time}},
   journal = {ACM Computing Surveys},
   issue_date = {June 2003},
   volume = {35},
