--- a/case-studies.tex
+++ b/case-studies.tex
@@ -8,7 +8,7 @@ The second case study, which has been repeated and endorsed by the joint Artifac
 
 %Finally, the third case study illustrates an application of our algorithms to automatically build OSR mappings to the context of source-level debugging of optimized code. On prominent C benchmarks, the \reconstruct\ algorithm is able to recovery the expected source-level values for the vast majority of user variables that become endangered due to the effects of classic compiler optimizations.
 
-Finally, in the third case study we show that our OSR compensation code algorithms also provide useful novel building blocks to integrate in optimized code debuggers. On prominent C benchmarks, the \reconstruct\ algorithm is able to recovery the expected source-level values for the vast majority of user variables that become endangered due to the effects of classic compiler optimizations.
+Finally, in the third case study we show that our OSR (On-Stack Replacement) compensation code algorithms also provide useful novel building blocks to integrate in optimized code debuggers. On prominent C benchmarks, the \reconstruct\ algorithm is able to recovery the expected source-level values for the vast majority of user variables that become endangered due to the effects of classic compiler optimizations.
 
 %In this section we show that our OSR compensation code techniques provide novel building blocks that could be integrated in optimized code debuggers."
 
