--- a/osr-correctness-related.tex
+++ b/osr-correctness-related.tex
@@ -1,3 +1,5 @@
+% !TEX root = thesis.tex
+
 \subsection{Comparison with Related Work}
 In this section we discuss the connections of our ideas with previous works. For existing OSR implementations - in which the generation of compensation code is left to code optimizers - we refer the reader to \mysection\ref{ss:osr-llvm-related}.
 
