--- a/state-of-art.tex
+++ b/state-of-art.tex
@@ -30,7 +30,7 @@ Examples of intra-procedural profiles are those collected by vertex, edge, and p
 Inter-procedural profiles aim at capturing the interactions between functions in a program. For instance, context-sensitive profiles associate a metric with a sequence of procedures (a {\em calling context}) that are active during intervals of a program's execution~\cite{Ammons97}. In the context of statically compiled languages, expensive inter-procedural analyses can be used to attemp to prove invariants; in a managed environment, a profile can be used to speculate that invariants hold without proving them correct for all possible inputs. A virtual machine can thus apply many transformations speculatively, relying on ad-hoc invalidation mechanisms when execution diverges from the assumptions made during compilation.
 
 \section{Code Optimizers}
-Mainstream runtime systems can resort to a large variety of techniques to generate executable code. A modern virtual machine typically relies on an interpreter (or a very fast baseline compiler) to execute a function the first time it is encountered, and then resorts to a Just-In-Time (JIT) compilation system, usually equipped with multiple optimization levels, to generate efficient code for a program's hot portions.
+Mainstream runtime systems can resort to a large variety of techniques to generate executable code. A modern virtual machine typically relies on an interpreter (or a very fast baseline compiler) to execute a function the first time it is encountered, and then resorts to a {\em just-in-time} (JIT) compilation system, usually equipped with multiple optimization levels, to generate efficient code for a program's hot portions.
 
 \subsection*{Interpretation}
 Traditionally, an interpreter can be implemented using \mytt{switch}-based dispatcher that examines each instruction - typically after the source-level representation has been translated to a bytecode form - and processes it. Threading~\cite{Bell73} has been historically used to simplify dispatch logic in many implementations. Nonetheless, matching the performance of optimized compiled code remains an impossible goal.
