--- a/kblpp.tex
+++ b/kblpp.tex
@@ -45,7 +45,7 @@ Differently from previous techniques~\cite{Tallam04,Roy09,Li12}, which rely on m
 \item instrumentation and execution of the program to be profiled (top);
 \item profiling of paths (bottom).
 \end{enumerate}
-We let the Ball-Larus profiling algorithm issue a stream of BL path IDs, where each ID is generated when a back edge in the control flow graph is traversed or the current procedure is abandoned. As a consequence of this modular approach, our method can be implemented on top of existing Ball-Larus path profilers, making it simpler to code and maintain.
+\noindent We let the Ball-Larus profiling algorithm issue a stream of BL path IDs, where each ID is generated when a back edge in the control flow graph is traversed or the current procedure is abandoned. As a consequence of this modular approach, our method can be implemented on top of existing Ball-Larus path profilers, making it simpler to code and maintain.
 
 %\vspace{1em}
 
