--- a/thesis.tex
+++ b/thesis.tex
@@ -41,6 +41,8 @@
 
 \maketitle
 
+\dedication{To my maternal grandfather,\\\smallskip after whom I took the determination and the ability to pursue this goal}
+
 \begin{abstract}
 \input{abstract}
 \end{abstract}
