--- a/experiments.tex
+++ b/experiments.tex
@@ -19,5 +19,5 @@ Finally, we present an extensive experimental evaluation of our on-stack replace
 \input{osr-evaluation}
 \fi
 
-\section{Summary}
-The experimental studies present in this chapter suggest that the ideas from \mychapter\ref{ch:profiling,ch:continuous} can be efficiently implemented in production systems, yielding promising performance results for popular benchmarks. Our performance profiling techniques incur a low run-time overhead that makes them amenable to be used in an adaptive optimization system. \osrkit\ can insert OSR points in both optimized and unoptimized code with a hardly noticeable overhead. We discuss in \mysection\ref{se:CS-matlab} an example of effective adaptive optimization enabled by it. The \buildcomp\ algorithm for automatic compensation code generations allowed OSR to be performed at a very large fraction of program locations in our experiments. \mysection\ref{se:CS-debug} illustrates a case study on an use of the algorithm to improve optimized code debugging.
+\section{Conclusions}
+The experimental studies presented in this chapter suggest that the ideas from \mychapter\ref{ch:profiling,ch:continuous} can be efficiently implemented in production systems, yielding promising performance results for popular benchmarks. Our performance profiling techniques incur a low run-time overhead that makes them amenable to be used in an adaptive optimization system. \osrkit\ can insert OSR points in both optimized and unoptimized code with a hardly noticeable overhead. We discuss in \mysection\ref{se:CS-matlab} an example of effective adaptive optimization enabled by it. The \buildcomp\ algorithm for automatic compensation code generations allowed OSR to be performed at a very large fraction of program locations in our experiments. \mysection\ref{se:CS-debug} illustrates a case study on an use of the algorithm to improve optimized code debugging.
